// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment empty global graphcool rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterToken": undefined,
    "local": false,
    "name": "shared-eu-west-1",
  },
]
`;

exports[`Environment interpolates env vars 1`] = `
Array [
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterToken": "this-is-so-special",
    "local": false,
    "name": "shared-eu-west-1",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 1`] = `
Array [
  Cluster {
    "baseUrl": "http://localhost:60000",
    "clusterToken": undefined,
    "local": true,
    "name": "local",
  },
  Cluster {
    "baseUrl": "https://remote.graph.cool",
    "clusterToken": "here-is-a-token",
    "local": true,
    "name": "remote",
  },
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterToken": undefined,
    "local": false,
    "name": "shared-eu-west-1",
  },
]
`;

exports[`Environment loads multiple cluster definitions correctly + gives cluster by name 2`] = `
Cluster {
  "baseUrl": "https://remote.graph.cool",
  "clusterToken": "here-is-a-token",
  "local": true,
  "name": "remote",
}
`;

exports[`Environment non-existent global graphcool rc 1`] = `
Array [
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterToken": undefined,
    "local": false,
    "name": "shared-eu-west-1",
  },
]
`;

exports[`Environment sets the platform token correctly 1`] = `
Array [
  Cluster {
    "baseUrl": "https://database-beta.graph.cool",
    "clusterToken": "asdf",
    "local": false,
    "name": "shared-eu-west-1",
  },
]
`;
